Handles Leva collapse bug

--- a/replicad-app-example/src/maslowCreate.css
+++ b/replicad-app-example/src/maslowCreate.css
@@ -800,6 +800,7 @@ Sidebar navigation
   top: 52%;
   left: 10px;
   width: 280px;
+  max-height: fit-content;
   z-index: 3;
 }
 
